Fix odd spacing with error messages

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -109,17 +109,14 @@
 
 .chatMessageError {
     padding: 20px;
-    /* background: #EDF5FD; */
     border-radius: 8px;
     box-shadow: rgba(182, 52, 67, 1) 1px 1px 2px, rgba(182, 52, 67, 1) 0px 0px 1px;
-    
     color: #242424;
     flex: none;
     order: 0;
     flex-grow: 0;
-    
     max-width: 800px;
-    /* filter: drop-shadow(rgba(182, 52, 67, 1) 1px 1px 2px) drop-shadow(rgba(182, 52, 67, 1) 0px 0px 1px); */
+    margin-bottom: 12px;
 }
 
 .chatMessageErrorContent {
